[package]
name = "sankey"
description = "A Rust library for generating sankey diagrams"
keywords = ["sankey", "diagram", "svg"]
categories = ["graphics", "visualization"]
documentation = "https://docs.rs/sankey"
homepage = "https://github.com/LukeMiles49/sankey-rs"
version = "0.1.1"
authors = ["Luke Miles <luke.49@live.co.uk>"]
license = "MPL-2.0"
repository = "https://github.com/LukeMiles49/sankey-rs"
readme = "README.md"
edition = "2021"

[dependencies]
svg = "^0.10.0"
embed-doc-image = "^0.1.4"
